--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "Jaadu",
   "description": "Group Managing Bot For Telegram",
+  "logo": "https://telegra.ph/file/fd0fdb3ae05ba6a2508a4.jpg",
   "keywords": [
     "telegram",
     "best",
