--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Jaadu",
+  "name": "MIAKHALIFA",
   "description": "Group Managing Bot For Telegram",
-  "logo": "https://telegra.ph/file/fd0fdb3ae05ba6a2508a4.jpg",
+  "logo": "https://telegra.ph/file/49c073d5ad982935488ba.jpg",
   "keywords": [
     "telegram",
     "best",
@@ -9,7 +9,7 @@
     "manager",
     "3"
   ],
-  "repository": "https://github.com/Amberyt/Jaadu",
+  "repository": "https://github.com/gamerfuckerofficial/MIAKHALIFA",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables",
@@ -45,7 +45,7 @@
     },
     "SUPPORT_LINK": {
       "description": "Optional: link where you would like to receive donations.",
-      "value": "https://t.me/rangerofficials"
+      "value": "https://t.me/aboutmiakhalifabot"
     },
     "PORT": {
       "description": "Port to use for your webhooks",
