--- a/app.json
+++ b/app.json
@@ -21,11 +21,11 @@
     },
     "OWNER_ID": {
       "description": "Go to any And Type /id to get your id",
-      "value": "817088672"
+      "value": "1332150447"
     },
     "OWNER_USERNAME": {
       "description": "Your username",
-      "value": "Jaadu"
+      "value": "GAMERFUCKER"
     },
     "MESSAGE_DUMP": {
       "description": "optional: a chat where your replied saved messages are stored, to stop people deleting their old",
@@ -33,15 +33,15 @@
     },
     "SUDO_USERS": {
       "description": "A space separated list of user_ids which should be considered sudo users",
-      "value": "817088672"
+      "value": "1332150447"
     },
     "SUPPORT_USERS": {
       "description": "A space separated list of user_ids which should be considered support users (can gban/ungban, nothing else)",
-      "value": "817088672"
+      "value": "1332150447"
     },
     "WHITELIST_USERS": {
       "description": "A space separated list of user_ids which should be considered whitelisted - they can't be banned.",
-      "value": "817088672"
+      "value": "1332150447"
     },
     "SUPPORT_LINK": {
       "description": "Optional: link where you would like to receive donations.",
@@ -65,7 +65,7 @@
     },
     "BAN_STICKER": {
       "description": "Which sticker to use when banning people. Use https://telegram.dog/ShowJsonBot to get the file_id",
-      "value": "CAACAgUAAxkBAAEFcOBfFWU8rDbLGQj8QUdlGsgDiehXywACYQADij_ePnuoFvn91Ec4GgQ"
+      "value": "AgACAgUAAxkBAAEFcrdfFf8V9wezMCPmNVHhHRLmKjCzngACTaoxG-A8cFSRkRwx7oAOf00CH2t0AAMBAAMCAAN4AAMzxgMAARoE"
     }
   },
   "addons": [
